second challenge complete

--- a/docs/1.first_challenge.md
+++ b/docs/1.first_challenge.md
@@ -482,4 +482,4 @@ sudo systemctl restart apache2
 
 After restarting the Apache server, we will be able to access our Laravel project in the browser with the EC2 Instance public IP address.
 
-<img src="./assets/challenge_1_final.png" alt="first" width="500"/>
+![First Challenge - App running](./assets/First_Challenge_App_running.png)
