second challenge complete

--- a/docs/2.second_challenge.md
+++ b/docs/2.second_challenge.md
@@ -4,7 +4,7 @@ Let's start decoupling our architecture.\
 In the first challenge, we created and deployed our application using an EC2.\
 In this session, we've learnt a bit about ALB and RDS and in the next challenge, we will be making use of these resources.
 
-<img src="./assets/challenge_2.png" alt="first" width="800px"/>
+![challenge_2](./assets/challenge_2.png)
 
 ## Below, a summary of your next tasks
 
@@ -38,7 +38,7 @@ After creating the subnet, select it and click on **Actions** at the top of the 
 
 >By default, subnets have the **Auto-Assign Public IP** setting as disabled.
 
-```
+```txt
 VPC ID: "dnx-vpc"
 Name: "dnx-public-subnet"
 Availability Zone: "us-eats-1a"
@@ -50,7 +50,7 @@ Tags:
 - Environment: "staging"
 ```
 
-```
+```txt
 VPC ID: "dnx-vpc"
 Name: "dnx-public-subnet2"
 Availability Zone: "us-eats-1b"
@@ -70,7 +70,7 @@ A private subnet is a subnet that is associated with a route table that doesn’
 
 >The procedure for creating the private subnets is the same as for creating public subnets, however you must not enable the option Enable auto-assign public IPv4 address.
 
-```
+```txt
 VPC ID: "dnx-vpc"
 Name: "dnx-private-subnet"
 Availability Zone: "us-eats-1a"
@@ -81,7 +81,7 @@ Tags:
 - Environment: "staging"
 ```
 
-```
+```txt
 VPC ID: "dnx-vpc"
 Name: "dnx-private-subnet2"
 Availability Zone: "us-eats-1b"
@@ -106,7 +106,7 @@ By default, all subnets are associated with the main route table. Let's associat
 
 Click on the **Edit subnet associations** and select the subnets (according to the type of route table) and click on the **Save** button.
 
-```
+```txt
 VPC ID: "dnx-vpc"
 Explicit subnet associations: "dnx-public-subnet","dnx-public-subnet2"
 Routes:
@@ -118,7 +118,7 @@ Tags:
 - Environment: "staging"
 ```
 
-```
+```txt
 VPC ID: "dnx-vpc"
 Explicit subnet associations: "dnx-private-subnet","dnx-private-subnet2"
 Routes:
@@ -133,7 +133,7 @@ Tags:
 
 Now let's create the security groups. For this challenge you will need 4 security groups. One for the application server, one for the ALB, one for the RDS and finally one for our NAT Instance. Both for the Application Server and for the NAT instance we will open port 22 so that we can configure our application.
 
-```
+```txt
 Security group name: "dnx-alb-scg"
 Description: "Allow acess to ALB"
 VPC ID: "dnx-vpc"
@@ -149,7 +149,7 @@ Tags:
 - Environment: "staging"
 ```
 
-```
+```txt
 Security group name: "dnx-nat-scg"
 Description: "Allow acess to EC2 NAT Instance"
 VPC ID: "dnx-vpc"
@@ -166,7 +166,7 @@ Tags:
 - Environment: "staging"
 ```
 
-```
+```txt
 Security group name: "dnx-svr-scg"
 Description: "Allow acess to private EC2 Instances"
 VPC ID: "dnx-vpc"
@@ -183,7 +183,7 @@ Tags:
 - Environment: "staging"
 ```
 
-```
+```txt
 Security group name: "dnx-rds-scg"
 Description: "Allow acess to RDS"
 VPC ID: "dnx-vpc"
@@ -219,7 +219,7 @@ Choose **Create key pair**.
 
 The private key file is automatically downloaded by your browser. The base file name is the name that you specified as the name of your key pair, and the file name extension is determined by the file format that you chose. Save the private key file in a safe place.
 
-```
+```txt
 Key pair name: *"dnx-key-pair"*
 Key pair type: *"RSA"*
 Private key file format: *".pem"*
@@ -233,7 +233,7 @@ In the next step select the Key pair, the custom VPC, the private subnet and the
 
 Now, add some storage and give some name to your instance.
 
-```
+```txt
 Application and OS Images: "Ubuntu, 22.04 LTS"
 Instance type: "t2.micro"
 Key pair: "dnx-key-pair"
@@ -271,7 +271,7 @@ sudo service iptables save
 
 Then click on **Launch Instance**.
 
-```
+```txt
 Application and OS Images: "Amazon Linux 2023 AMI"
 Instance type: "t2.micro"
 Key pair: "dnx-key-pair"
@@ -317,7 +317,7 @@ In **Listeners and routing**, select the **Target Group** created earlier. Final
 
 #### Target Group
 
-```
+```txt
 Target type: Instances
 Target group name: "dnx-private-trg"
 Protocol: "HTTP"
@@ -335,7 +335,7 @@ Tags:
 
 #### Load Balancer
 
-```
+```txt
 Type: "Application Load Balancer"
 Name: "dnx-alb"
 Scheme: "Internet-facing"
@@ -363,7 +363,7 @@ An RDS Subnet Group is a collection of subnets that you can use to designate for
 
 #### Create a RDS Subnet Groups
 
-```
+```txt
 Name: dnx-rds-subnet-grp
 VPC: dnx-vpc
 Availability zone:
@@ -376,7 +376,7 @@ Subnet:
 
 #### Create RDS MySQL instance in the Private Subnet
 
-```
+```txt
 Engine: *"MySQL"*
 Version: *"8.0.28"*
 Template: *"Free tier"*
@@ -561,7 +561,7 @@ sudo vi /var/www/html/ChallengeDevOps/.env
 
 Update the DB block with your Database details
 
-```
+```txt
 >DB_CONNECTION=mysql
 >DB_HOST=Database-Endpoint
 >DB_PORT=3306
@@ -584,7 +584,7 @@ sudo php artisan migrate
 
 Because the main `index.php` file of the project resides in the `/ChallengeDevOps/public` directory of the project, we have to update our virtual host in such a way that it should route the traffic into the `/ChallengeDevOps/public` directory.
 
-We just have to add `/ChallengeDevOps/public` at the end of the `DocumentRoot` and at other places in the virtual host file where we have to define the document root of our project. 
+We just have to add `/ChallengeDevOps/public` at the end of the `DocumentRoot` and at other places in the virtual host file where we have to define the document root of our project.
 
 To open your virtual host file in edit mode, execute the following command.
 
@@ -596,20 +596,20 @@ Now, add `/public` at the end of the document root so that Apache will route a
 
 For example, Here is the updated default virtual host configuration file without comments.
 
-```
+```txt
 <VirtualHost *:80>
-	ServerAdmin webmaster@localhost
-	ServerName localhost
-	DocumentRoot /var/www/html/ChallengeDevOps/public
+    ServerAdmin webmaster@localhost
+    ServerName localhost
+    DocumentRoot /var/www/html/ChallengeDevOps/public
 
-	<Directory /var/www/html/ChallengeDevOps>
-		Options Indexes MultiViews
-		AllowOverride None
-		Require all granted
-	</Directory>
-	
-	ErrorLog ${APACHE_LOG_DIR}/error.log
-	CustomLog ${APACHE_LOG_DIR}/access.log combined
+    <Directory /var/www/html/ChallengeDevOps>
+        Options Indexes MultiViews
+        AllowOverride None
+        Require all granted
+    </Directory>
+
+    ErrorLog ${APACHE_LOG_DIR}/error.log
+    CustomLog ${APACHE_LOG_DIR}/access.log combined
 
 </VirtualHost>
 ```
@@ -623,6 +623,6 @@ sudo a2ensite challengedevops.conf
 sudo systemctl restart apache2
 ```
 
-After restarting the Apache server, we will be able to access our Laravel project in the browser with the ALB DNS name address on your browser. 
+After restarting the Apache server, we will be able to access our Laravel project in the browser with the ALB DNS name address on your browser.
 
 ![Second Challenge - App running](./assets/Second_Challenge_App_running.png)
