fourth challenge complete

--- a/docs/4.fourth_challenge.md
+++ b/docs/4.fourth_challenge.md
@@ -1,4 +1,4 @@
-## Fourth Challenge
+# Fourth Challenge
 
 Let's start containerizing our architecture.\
 Last session, we've learnt a bit about Docker and docker-compose. \
@@ -6,14 +6,50 @@ In the next challenge, we will be making use of these resources. \
 Now, we will not config our application directly in the EC2. \
 In this challenge, you will need to create a Dockerfile responsible to automatise all the EC2 configuration process, and you should run your application by using docker-compose.
 
-<img src="./assets/challenge_4.png" alt="first" width="1000px"/>
+![challenge_4](./assets/challenge_4.png)
 
-
-### Below, a summary of your next tasks:
+## Below, a summary of your next tasks
 
 |  | Task |
 |------|-------------|
-|1| Create a Dockerfile based in PHP. <br/> Here is where you will have apache and all your stuff installed previously in the EC2. |
+|1| Create a Dockerfile based in PHP. Here is where you will have apache and all your stuff installed previously in the EC2. |
 |2| Create a docker-compose.yml, adding a service that will be responsible to build your Dockerfile. |
 |3| Build your image, and get your docker container up and running by using docker-compose. |
 |4| See you next session :)|
+
+## Solution
+
+### Create Docker Image
+
+Very well, we already have the Dockerfile that describes the steps that will be executed to create the image.
+
+To process the Dockerfile, we use the command: `docker build -t <image>`.
+
+Let's assume that I want to create an image with the name: `macoratti/nginx:1.0`.
+
+To do this, we use the build command and provide the name of the image, the tag, and a period (.). The command looks like this:
+
+```docker
+docker build -t macoratti/nginx:1.0 .
+```
+
+Where:
+
+- `docker build`: The command.
+- `-t`: Parameter used to specify that the image belongs to my user.
+- `macoratti/nginx:1.0`: The name of the image and the tag assigned to the image.
+- `.`: Represents the current directory (as we performed the build within the Dockerfile's directory).
+
+Note: The build command works with the directory path, not the file path. Therefore, you need to provide the directory path, or in our case, since we are in the directory where the Dockerfile is located, just a period (.) to indicate that the Dockerfile is in the current directory.
+
+The `docker build` command builds an image from a Dockerfile and a context. The build context is the set of files at the specified PATH or URL. PATH is the directory on your local file system, and URL is the location of the GIT repository.
+
+To verify, enter the command: `docker images`.
+
+This command will list the Docker images that have been built or pulled on your system. It will display information about the images, including their names, tags, sizes, and when they were created.
+
+### Docker Compose File
+
+Create a .env file in the project root directory (in the same way it was created in the ec2 instance)
+
+Go to the `.deploy` directory and run the `docker compose up -d` command
